--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "next": "10.2.3",
@@ -15,5 +17,8 @@
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
